updated npm and fixed issue with disappearing sticky when scrolling past body on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
+  height: auto;
 }
 
 @layer components {
